# MicroDesk

./: .gitignore  CMakeLists.txt  LICENSE  MicroDesk.c  README.md
.cache/clangd/index/: MicroDesk.c.32E89AA1976D973D.idx  screen.c.CF2DEE7D6DA9D5BF.idx  screen.h.4D65E7E513321B69.idx
core/: system.c  system.h
core/filesystem/: filesystem.c  filesystem.h
core/network/: net.c  net.h
core/screen/: screen.c  screen.h
core/utils/: commands.c  commands.h  data.h  lib.c  lib.h  luastd.c  luastd.h  shell.c  shell.h
lib/: LuaWrapper.c  LuaWrapper.h
lib/lua/: lbaselib.c
